--- a/package.json
+++ b/package.json
@@ -4,26 +4,27 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node bootstrap.js",
+    "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "mocha --file src/test",
+    "test": "mocha --file src/test/**",
     "build": "babel src --out-dir dist"
   },
   "devDependencies": {
-    "mocha": "^6.2.0",
-    "nodemon": "^1.19.1",
     "babel-cli": "^6.10.1",
     "babel-core": "^6.14.0",
     "babel-jest": "^21.2.0",
     "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-0": "^6.5.0"
+    "babel-preset-stage-0": "^6.5.0",
+    "mocha": "^6.2.0",
+    "nodemon": "^1.19.1"
   },
   "dependencies": {
     "@hapi/boom": "^7.4.3",
     "@hapi/joi": "^15.1.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^14.3.1"
   }
